2009-14-09  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlobj.h (IDO_SHGIOI_SHARE, IDO_SHGIOI_LINK, IDO_SHGIOI_SLOWFILE,
	IDO_SHGIOI_DEFAULT, SHGetIconOverlayIndexW, SHGetIconOverlayIndexA,
	SHGetIconOverlayIndex): Define.

	Thanks to Tim Kosse for report.

2009-13-09  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/wincon.h (AttachConsole): Correct guard.

	Thanks to Alexander Shaduri for report.

2009-13-09  Robert Moerland  <rjmoerland@users.sourceforge.net>

	* include/wininet.h (NTERNET_CACHE_ENTRY_INFOW): Correct definition.
	(DeleteUrlCacheEntryW, DeleteUrlCacheEntryA): Define.

2009-13-09  Jacky Lai  <crazyjacky@users.sourceforge.net>

	* include/winerror.h: Fix typos in macro names.

2009-13-09  Jan Nijtmans  <nijtmans@users.sourceforge.net>

	* include/winuser.h (SendMessageTimeoutA, SendMessageTimeoutW): Correct
	definition.

2009-11-09  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winnt.h (PROCESS_SUSPEND_RESUME): Define.

2009-10-29  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Honor DESTDIR for winsup/mingw and winsup/w32api.
	Detect and report error if installation paths are win32
	format, but DESTDIR is non-empty.

	* Makefile.in (install, uninstall): Use FLAGS_TO_PASS
	when invoking make in subdirs.
	* lib/Makefile.in (DESTDIR): Honor per convention.
	(need-DESTDIR-compatibility): New macro; define it and a
	corresponding rule.
	(fail-DESTDIR-compatibility): New dependency goal.
	(install-libraries, install-headers, uninstall-libraries,
	uninstall-headers): Require need-DESTDIR-compatibility.
	* lib/ddk/Makefile.in: Ditto.
	* lib/directx/Makefile.in: Ditto.

2009-10-04  Corinna Vinschen  <corinna@vinschen.de>

	* include/winbase.h (CreateRestrictedToken): Declare for >= Win 2000.
	_WIN32_WINNT >= 0x0500.
	(DISABLE_MAX_PRIVILEGE, SANDBOX_INERT, LUA_TOKEN,
	WRITE_RESTRICTED): Define.
	(IsTokenRestricted): Declare for >= Win 2000.

2009-08-30  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
